--- a/src/sass/assets/cppmoderno/_single-post.scss
+++ b/src/sass/assets/cppmoderno/_single-post.scss
@@ -17,11 +17,14 @@ code {
         }
     }
 
-    .entry-meta {
-        font-size: 80%;
-        text-align: center;
-        a {
-            text-decoration: none;
+    .post {
+        &>.entry-meta {
+            font-size: 80%;
+            text-align: center;
+
+            a {
+                text-decoration: none;
+            }
         }
     }
 
